--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <html><head>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>
@@ -32,7 +32,7 @@
     </head>
     <body class=Bodyclass>
     <header  class="Sitehead" >
-    <img class="Profilepic" src="./img/slider/img-8.png">
+    <img class="Profilepic" src="/img-8.png">
     <h1>
     Hi, This is Fahad Ahmad
     </h1> <h2>I'm Learning Web Development.</h2>
